<resources>
    <string name="app_name">BeWell</string>
    <string name="mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? Click here!</string>
    <string name="forget_password">Forget your password? Click here!</string>
    <string name="reset_password">Reset Password</string>
    <string name="registration">Registration</string>
    <string name="already_have_an">Already have an account? Click here!</string>
    <string name="username">Username</string>
    <string name="i_have_read"><u>I have read and accept the  General Terms and Conditions.</u></string>
    <string name="Form">Form</string>
    <string name="health">Health</string>
    <string name="settings">settings</string>
    <string name="home">Home</string>
    <string name="content1">WHO</string>
</resources>