<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".connection.LoginActivity">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/gifImageView2"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/gifImageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_account_circle_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/email_layout"
            app:layout_constraintStart_toStartOf="@+id/email_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:startIconDrawable="@drawable/ic_lock_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="@+id/password_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <TextView
            android:id="@+id/dont_have_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="@+id/button_login"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="@+id/dont_have_account_textview"
            app:layout_constraintStart_toStartOf="@+id/dont_have_account_textview"
            app:layout_constraintTop_toBottomOf="@+id/dont_have_account_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>