<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".authentication.RegistrationActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:errorEnabled = "true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/email_layout"
            app:layout_constraintStart_toStartOf="@+id/email_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_layout"
            app:startIconDrawable="@drawable/ic_account_circle_black_24dp"
            app:errorEnabled = "true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/user_name_layout"
            app:layout_constraintStart_toStartOf="@+id/user_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/user_name_layout"
            app:startIconDrawable="@drawable/ic_lock_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout_re"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintStart_toStartOf="@+id/password_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            app:endIconMode="password_toggle"
            app:errorEnabled = "true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repassword_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:errorEnabled = "true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="@+id/text_view_accept"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/already_have_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an"
            app:layout_constraintEnd_toEndOf="@+id/button_reg"
            app:layout_constraintStart_toStartOf="@+id/button_reg"
            app:layout_constraintTop_toBottomOf="@+id/button_reg" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/text_view_accept"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_layout_re"
            app:layout_constraintTop_toBottomOf="@+id/password_layout_re" />

        <TextView
            android:id="@+id/text_view_accept"
            android:layout_width="221dp"
            android:layout_height="44dp"
            android:text="@string/i_have_read"
            android:textColor="#039BE5"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/password_layout_re"
            app:layout_constraintTop_toBottomOf="@+id/password_layout_re" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>